--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "private": true,
   "version": "1.0.0",
   "engines": { "node": ">=20" },
-  "dependencies": { "n8n": "^1.93.0" },
+  "dependencies": { "n8n": "1.93.0" },
   "scripts": { "start": "bash ./start-render.sh" }
 }
