--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "eplatum-n8n",
   "private": true,
   "version": "1.0.0",
-  "engines": { "node": ">=20" },
-  "dependencies": { "n8n": "1.93.0" },
-  "scripts": { "start": "bash ./start-render.sh" }
+  "engines": {
+    "node": ">=20"
+  },
+  "dependencies": {
+    "n8n": "^1.120.0"
+  },
+  "scripts": {
+    "start": "bash ./start-render.sh"
+  }
 }
